--- a/projects/guane-ui/src/lib/components/button/styles/button-sizes.scss
+++ b/projects/guane-ui/src/lib/components/button/styles/button-sizes.scss
@@ -1,3 +1,5 @@
+
+@use "sass:map";
 $button-sizes: (
   small: (
     padding: 8px 16px,
@@ -18,8 +20,8 @@ $button-sizes: (
 
 @each $size, $properties in $button-sizes {
   .guane-button-#{$size} {
-    padding: map-get($properties, padding);
-    font-size: map-get($properties, font-size);
-    height: map-get($properties, height);
+    padding: map.get($properties, padding);
+    font-size: map.get($properties, font-size);
+    height: map.get($properties, height);
   }
 }
